fix residential a commercial

--- a/pcs/public/assets/css/style.css
+++ b/pcs/public/assets/css/style.css
@@ -4958,7 +4958,7 @@ blockquote {
 	background: #00baee;
 	height: 50px;
 	width: 50px;
-	right: 50px;
+	left: 50px;
 	bottom: 77px;
 	color: #fff;
 	font-size: 20px;
@@ -4966,6 +4966,25 @@ blockquote {
 	border-radius: 50%;
 	font-size: 20px;
 	line-height: 48px;
+}
+
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:#25d366;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
+
+.my-float{
+	margin-top:16px;
 }
 
 /* 33. Preloader */
